still fixing webpage overflow

--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-html, body {
+body {
     overflow-x: hidden;
     padding:0;
     margin:0;
